<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:title="@string/settings"
        android:titleTextColor="@color/white"
        android:background="#29562D"/>


    <TextView
        android:paddingTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/choose_the_country"/>

    <RadioGroup
        android:id="@+id/countries_rg"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/eg_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/egy" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/us"
            android:id="@+id/us_rb"/>


        <RadioButton
            android:id="@+id/uk_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uk"/>


    </RadioGroup>

</LinearLayout>